# opd-sem6

./: .env  .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2aeae39a8f5b_create_initial_tables.py
app/: config.py  deps.py  main.py
app/api/v1/: __init__.py  assignments.py  attachments.py  health.py  homework.py  questions.py  submissions.py  widgets.py
app/core/: access.py
app/db/: arq_pool.py  mongo.py  postgres.py
app/models/: __init__.py  assignment.py  base.py  homework_details.py  question.py  stats_module.py  widget.py
app/repositories/: ai_logs.py  snapshots.py  submissions.py
app/schemas/: assignment.py  homework.py  question.py  submission.py  widget.py
app/services/: ai_grader.py  assignments.py  auto_grader.py  homework.py  proxy_client.py  questions.py  stats.py  storage.py  widget_config.py  widgets.py
app/workers/: arq_worker.py
tests/: conftest.py  test_ai_grader.py  test_arq_worker.py  test_assignments.py  test_attachments.py  test_grade_submission.py  test_homework.py  test_questions.py  test_smoke.py  test_submissions_homework.py  test_submissions_test.py  test_widgets.py
tests/manual_tests/: flow_ai_grading.sh  flow_homework_assignment.sh  flow_test_assignment.sh
